<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_auto_stories"
            android:title="@string/menu_resources" />
        <item
            android:id="@+id/nav_manage_books"
            android:icon="@drawable/ic_book_edit"
            android:title="@string/menu_manage_books" />
        <item
            android:id="@+id/nav_lended_books"
            android:icon="@drawable/ic_import_contacts"
            android:title="@string/menu_lended_books" />
        <item
            android:id="@+id/nav_members"
            android:icon="@drawable/ic_group"
            android:title="@string/menu_members" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user_circle"
            android:title="@string/menu_profile" />
    </group>
</menu>
