<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/bottom_books"
        android:icon="@drawable/ic_menu_book"
        android:title="@string/menu_books" />
    <item
        android:id="@+id/bottom_members"
        android:icon="@drawable/ic_group"
        android:title="@string/menu_members" />
    <item
        android:id="@+id/bottom_alerts"
        android:icon="@drawable/ic_notifications"
        android:title="@string/menu_alerts" />
    <item
        android:id="@+id/bottom_profile"
        android:icon="@drawable/ic_user_circle"
        android:title="@string/menu_profile" />
</menu>
